src/styles.scss
@import "./variable.scss";
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    border: 9px solid $color-blue;
    min-height: 100vh;
    font-family: "Roboto", sans-serif;
}

@media screen and (max-width: 1199px) {
    body {
        display: none;
    }
}

h1 {
    font-size: 48px;
}

h2 {
    font-size: 24px;
    font-weight: 500;
}

img {
    width: 100%;
}

.input {
    outline: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;
}

.simplebar-content {
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    height: 525px;
    width: 1149px;
    position: relative;
}

.simplebar-scrollbar {
    background-color: $color-scrollbar-thumb;
    border-radius: 50px;
    width: 4px;
    &::before {
        display: none;
    }
}

.simplebar-track {
    background-color: $color-scrollbar-track;
    border-radius: 50px;
    width: 4px !important;
}

.container {
    width: auto;
    max-width: 1200px;
    margin: 0 auto;
}

